deployment/scripts/deployment/common-infra/base/gateway.k8s.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nagp-ecom-gateway
  namespace: nagp-ecom
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "nagp-ecom.duckdns.org"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "nagp-ecom.duckdns.org"
      tls:
        mode: Terminate
        certificateRefs:
          - name: ecom-tls-secret
            namespace: nagp-ecom
      allowedRoutes:
        namespaces:
          from: All
